UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Indirect_TargetExclusion_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Billing_Date__c</fullName>
        <label>Indirect Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indirect_Customer_Name__c</fullName>
        <label>Indirect Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Product_Family__c</fullName>
        <label>Indirect Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Product__c</fullName>
        <label>Indirect Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Region__c</fullName>
        <label>Indirect Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Sales_Rep_Name__c</fullName>
        <label>Indirect Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Sales__c</fullName>
        <label>Indirect Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirect_Unique_Identifier__c</fullName>
        <label>Indirect Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Units__c</fullName>
        <label>Indirect Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_to_Number__c</fullName>
        <label>Sold to Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Indirect TargetExclusion Summary</label>
    <nameField>
        <label>Indirect TargetExclusion Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indirect TargetExclusion Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>